--- a/escola/templates/cadastros/_importar_alunos_content.html
+++ b/escola/templates/cadastros/_importar_alunos_content.html
@@ -1,4 +1,4 @@
-﻿<h2>Importar Alunos via Arquivo</h2>
+<h2>Importar Alunos via Arquivo</h2>
 
 <div class="info-box">
     <div class="info-header">
@@ -12,7 +12,7 @@
         <ul>
             <li>O arquivo deve conter as seguintes colunas (a ordem não importa):</li>
             <li><strong>Obrigatórias:</strong> MATRICULA, NOME</li>
-            <li><strong>Opcionais:</strong> DATA_NASCIMENTO, DATA_MATRÍCULA, SERIE, TURMA, TURNO, PAI, MAE, RESPONSAVEL, TELEFONE 1, TELEFONE 2, TELEFONE 3, EMAIL, RUA, NUMERO, COMPLEMENTO, BAIRRO, CIDADE, ESTADO</li>
+            <li><strong>Opcionais:</strong> SERIE, TURMA, TURNO, PAI, MAE, RESPONSAVEL, TELEFONE 1, TELEFONE 2, TELEFONE 3, EMAIL, RUA, NUMERO, COMPLEMENTO, BAIRRO, CIDADE, ESTADO</li>
         </ul>
         
         <h4>Dicas Importantes:</h4>
