--- a/escola/templates/disciplinar/fmd_novo.html
+++ b/escola/templates/disciplinar/fmd_novo.html
@@ -221,4 +221,11 @@
     </div>
 </div>
 </div>
+
+<div class="footer">
+    SEDUC<br>
+    Coordenação SEDUC
+</div>
+
+<div style="background: red; height: 10px;"></div>
 {% endblock %}
