--- a/escola/templates/disciplinar/fmd_novo_pdf.html
+++ b/escola/templates/disciplinar/fmd_novo_pdf.html
@@ -102,5 +102,38 @@
         Enviado por e-mail: {{ envio.data_hora if envio.data_hora else '---' }},
         {{ envio.email_destinatario if envio.email_destinatario else '---' }}
     </div>
+
+    {% if fmd.comparecimento_responsavel %}
+    <div style="page-break-before: always;"></div>
+    <div style="padding:10px; color:#222;">
+        <div style="text-align:center; font-weight:bold;">
+            CONTINUAÇÃO DA FMD {{ fmd.fmd_id }} DO ALUNO {{ aluno.nome|upper }}
+        </div>
+        <div style="margin-top:22px; font-weight:bold;">DEFESA DO RESPONSÁVEL OU DO ESTUDANTE (SE MAIOR DE IDADE)</div>
+        <div style="border:1px solid #000; height:88px; margin:8px 0 22px 0;"></div>
+        <div style="border-bottom:1px solid #000; width:90%; margin:0 auto 0 0;"></div>
+        <div style="margin:16px 0 0 0; text-align:right;">
+            ________________, _____ de ________________ de __________.
+        </div>
+        <div style="margin:14px 0 22px 0;">
+            Nome do Responsável: {{ responsavel.nome|upper }}
+        </div>
+        <div style="text-align:center;">
+            <div style="border-bottom:1px solid #000; width:330px; margin:0 auto;"></div>
+            <span style="font-size:0.95em;">{{ responsavel.nome|upper }}</span><br>
+            <span style="font-size:0.95em;">Responsável pelo Aluno</span>
+        </div>
+        <div style="margin:38px 0 11px 0; font-weight:bold;">DESPACHO DO GESTOR:</div>
+        <div style="border:1px solid #000; height:110px; margin-bottom:14px;"></div>
+        <div style="margin:12px 0 0 0; text-align:right;">
+            ________________, _____ de ________________ de __________.
+        </div>
+        <div style="text-align:center; margin-top:20px;">
+            <div style="border-bottom:1px solid #000; width:330px; margin:0 auto;"></div>
+            <span style="font-size:0.95em;">{{ nome_usuario|upper }}</span><br>
+            <span style="font-size:0.95em;">{{ cargo_usuario|upper }}</span>
+        </div>
+    </div>
+{% endif %}
 </body>
 </html>
