--- a/escola/templates/base.html
+++ b/escola/templates/base.html
@@ -174,6 +174,11 @@
                     <a href="{{ url_for('dashboard') }}" class="nav-link {% if request.endpoint == 'dashboard' %}active{% endif %}">
                         <i class="fas fa-tachometer-alt"></i><span>Dashboard</span>
                     </a>
+
+                    <!-- Novo menu Relatórios Disciplinares -->
+                    <a href="{{ url_for('relatorios_disciplinares_bp.index') }}" class="nav-link">
+                        <i class="fas fa-chart-pie"></i><span>Relatórios Disciplinares</span>
+                    </a>
                 </div>
 
                 {% if session.get('nivel') in [1, 2] %}
