Atualizações nos templates e estilos conforme orientação

--- a/escola/templates/login.html
+++ b/escola/templates/login.html
@@ -35,11 +35,7 @@
         </form>
 
         <div class="login-footer">
-            <p>Primeiro acesso? Use as credenciais padrão:</p>
-            <div class="default-credentials">
-                <p><strong>Usuário:</strong> admin_ti</p>
-                <p><strong>Senha:</strong> admin123</p>
-            </div>
+            <a href="/recuperar_senha" class="forgot-link">Esqueceu a senha?</a>
         </div>
     </div>
 </div>
