--- a/escola/templates/cadastro_usuario.html
+++ b/escola/templates/cadastro_usuario.html
@@ -24,6 +24,13 @@
             </span>
         </div>
     </div>
+
+    <div class="form-group">
+        <label for="email">
+            <i class="fas fa-envelope"></i> E-mail institucional <span class="required">*</span>
+        </label>
+        <input type="email" id="email" name="email" required placeholder="exemplo@escola.edu.br">
+    </div>
     
     <div class="form-group">
         <label for="nivel">
@@ -35,18 +42,19 @@
                 <option value="{{ nivel_id }}">{{ descricao }}</option>
             {% endfor %}
         </select>
-<div class="form-group">
-  <label for="cargo">Cargo</label>
-  <select id="cargo" name="cargo" class="form-control" required>
-    <option value="" disabled selected>Selecione...</option>
-    <option>Analista TI</option>
-    <option>Coordenação SEDUC</option>
-    <option>Diretor</option>
-    <option>Coordenação Pedagógica</option>
-    <option>Gestor</option>
-    <option>Servidor Escolar</option>
-  </select>
-</div>
+    </div>
+    <div class="form-group">
+        <label for="cargo">Cargo</label>
+        <select id="cargo" name="cargo" class="form-control" required>
+            <option value="" disabled selected>Selecione...</option>
+            <option>Analista TI</option>
+            <option>Coordenação SEDUC</option>
+            <option>Diretor</option>
+            <option>Coordenação Pedagógica</option>
+            <option>Gestor</option>
+            <option>Servidor Escolar</option>
+        </select>
+    </div>
 
     </div>
 
