--- a/escola/templates/editar_usuario.html
+++ b/escola/templates/editar_usuario.html
@@ -27,6 +27,14 @@
     </div>
 
     <div class="form-group">
+        <label for="email">
+            <i class="fas fa-envelope"></i> E-mail institucional <span class="required">*</span>
+        </label>
+        <input type="email" id="email" name="email" required
+               value="{{ user.email }}" placeholder="exemplo@escola.edu.br">
+    </div>
+
+    <div class="form-group">
         <label for="nivel_acesso">
             <i class="fas fa-shield-alt"></i> Nível de Acesso <span class="required">*</span>
         </label>
@@ -37,20 +45,21 @@
                 </option>
             {% endfor %}
         </select>
-<div class="form-group">
-  <label for="cargo">
-    <i class="fas fa-briefcase"></i> Cargo
-  </label>
-  <select id="cargo" name="cargo" class="form-control" required>
-    <option value="" disabled {% raw %}{% if not user.cargo %}selected{% endif %}{% endraw %}>Selecione...</option>
-    <option {% raw %}{% if user.cargo == 'Analista TI' %}selected{% endif %}{% endraw %}>Analista TI</option>
-    <option {% raw %}{% if user.cargo == 'Coordenação SEDUC' %}selected{% endif %}{% endraw %}>Coordenação SEDUC</option>
-    <option {% raw %}{% if user.cargo == 'Diretor' %}selected{% endif %}{% endraw %}>Diretor</option>
-    <option {% raw %}{% if user.cargo == 'Coordenação Pedagógica' %}selected{% endif %}{% endraw %}>Coordenação Pedagógica</option>
-    <option {% raw %}{% if user.cargo == 'Gestor' %}selected{% endif %}{% endraw %}>Gestor</option>
-    <option {% raw %}{% if user.cargo == 'Servidor Escolar' %}selected{% endif %}{% endraw %}>Servidor Escolar</option>
-  </select>
-</div>
+    </div>
+    <div class="form-group">
+      <label for="cargo">
+        <i class="fas fa-briefcase"></i> Cargo
+      </label>
+      <select id="cargo" name="cargo" class="form-control" required>
+        <option value="" disabled {% raw %}{% if not user.cargo %}selected{% endif %}{% endraw %}>Selecione...</option>
+        <option {% raw %}{% if user.cargo == 'Analista TI' %}selected{% endif %}{% endraw %}>Analista TI</option>
+        <option {% raw %}{% if user.cargo == 'Coordenação SEDUC' %}selected{% endif %}{% endraw %}>Coordenação SEDUC</option>
+        <option {% raw %}{% if user.cargo == 'Diretor' %}selected{% endif %}{% endraw %}>Diretor</option>
+        <option {% raw %}{% if user.cargo == 'Coordenação Pedagógica' %}selected{% endif %}{% endraw %}>Coordenação Pedagógica</option>
+        <option {% raw %}{% if user.cargo == 'Gestor' %}selected{% endif %}{% endraw %}>Gestor</option>
+        <option {% raw %}{% if user.cargo == 'Servidor Escolar' %}selected{% endif %}{% endraw %}>Servidor Escolar</option>
+      </select>
+    </div>
 
     </div>
     
