Atualizações nos templates e estilos conforme orientação

--- a/escola/templates/login.html
+++ b/escola/templates/login.html
@@ -35,7 +35,7 @@
         </form>
 
         <div class="login-footer">
-            <a href="/recuperar_senha" class="forgot-link">Esqueceu a senha?</a>
+            <a href="{{ url_for('auth_bp.recuperar_senha') }}" class="forgot-link">Esqueceu a senha?</a>
         </div>
     </div>
 </div>
