--- a/escola/templates/base.html
+++ b/escola/templates/base.html
@@ -115,6 +115,10 @@
                     <a href="{{ url_for('documentos_bp.gerenciar_rfos') }}" class="nav-link ps-4">
                         <i class="fas fa-folder-open"></i><span>Gerenciar RFOs</span>
                     </a>
+                    <a href="{{ url_for('visualizacoes_bp.listar_fmds') }}" class="nav-link ps-4">
+                        <i class="fas fa-file-signature"></i><span>Gerenciar FMDs</span>
+                    </a>
+                </div>
                 </div>
                 {% if session.get('nivel') in [1, 2] %}
                 <div class="menu-section">
